# Google_AlphaEarth_Tomato_Farms

./: .gitignore  Google_AlphaEarth_Tomato_Farms.code-workspace  README.md  environment.yml  pyproject.toml  requirements-modeling-cpu.txt  requirements-modeling.txt  requirements.txt
archive/sagemaker-studio/: HOME_DIRECTORY_LISTING.txt  README.md  SNAPSHOT_UTC.txt
configs/: landiq_years.example.yaml  paths.example.yaml  sagemaker.example.yaml
configs/modeling/: README.md  tomato_unet.yaml  tomato_unet_smoke.yaml  tomato_unet_studio_fast.yaml
data/: README.md
data/s3/: README.md
data/splits/: README.md
docs/testing-and-inference-handbook/: README.md
figures/: README.md
guide/: 01-project-plan.md  02-sagemaker-cursor-remote.md  03-data-s3-and-training.md  04-inference-and-roadmap.md  05-operations-costs-and-handbook.md  README.md
infra/: README.md  deploy-sagemaker-notebook.ps1  sagemaker-notebook.yaml
modeling/: README.md
modeling/inference/: README.md  infer_batch.py  infer_chip.py  infer_tile.py  zonal_stats.py
modeling/train/: train.py
notebooks/: 01_explore_landiQ.ipynb  02_filter_tomato_polygons.ipynb  03_clip_alpha_earth.ipynb  README.md
notebooks/alpha_earth/: 01_clip_alpha_earth.ipynb  README.md
notebooks/landiq/: README.md
notebooks/modeling/: 01_build_splits_and_check.ipynb  (+3 more)
paper/: README.md  main.tex
src/: __init__.py
tools/: build_chips_index.py  check_training_ready.py  plot_experiment_figures.py  studio_train_after_local_mirror.sh  sync_alphaearth_clips_from_s3.sh  tail_train_log.sh  train_full_tomato_baseline.py
(+120 files in other folders)
