[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaearth-tomato-farms"
version = "0.1.0"
description = "LandIQ, Alpha Earth clips, and tomato farm mapping workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["src", "src.landiq", "src.landiq.years", "src.alpha_earth", "src.utils"]
